Default xrWeatherEditor theme changed to VS2015 Light Compiler warnings fixes

--- a/src/editors/xrWeatherEditor/xrWeatherEditor.vcxproj
+++ b/src/editors/xrWeatherEditor/xrWeatherEditor.vcxproj
@@ -144,6 +144,9 @@
     <Reference Include="WeifenLuo.WinFormsUI.Docking">
       <HintPath>..\..\..\sdk\binaries\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
+    <Reference Include="WeifenLuo.WinFormsUI.Docking.ThemeVS2015">
+      <HintPath>..\..\..\sdk\binaries\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
